--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,11 @@ h1 {
     text-decoration: teal;
 }
 
+#decButtons{
+    display:flex;
+    flex-direction: column; 
+}
+
 .container {
     padding: 10px;
     border: 5px solid black;
@@ -36,5 +41,5 @@ h1 {
     bottom: 0;
     display: flex;
     text-align: right;
-    display: inline-block;
+    /* display: inline-block; */
 }
